--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
+  "name": "social-network",
+  "version": "0.7.1",
   "private": true,
-  "homepage": "",
+  "homepage": "http://localhost:3000",
   "dependencies": {
     "@ant-design/icons": "^4.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
@@ -17,12 +17,20 @@
     "@types/node": "^14.14.24",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "@types/react-icons": "^3.0.0",
+    "@types/styled-components": "^5.1.7",
     "antd": "^4.11.2",
     "axios": "^0.21.0",
+    "classnames": "^2.2.6",
+    "dayjs": "^1.10.4",
+    "dayjs-ext": "^2.2.0",
     "formik": "^2.2.6",
     "formik-antd": "^2.0.1",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
+    "react-hamburger-menu": "^1.2.1",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
@@ -31,6 +39,7 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "store": "^2.0.12",
+    "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
@@ -61,12 +70,14 @@
     ]
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.6.2",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-test-renderer": "^17.0.0",
     "@types/redux-form": "^8.3.1",
     "@types/uuid": "^8.3.0",
     "babel-plugin-import": "^1.13.3",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "gh-pages": "^3.1.0",
     "react-test-renderer": "^17.0.1",
     "typescript": "^4.1.3"
